--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  main:
+    allow-bean-definition-overriding: true
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
@@ -12,6 +14,9 @@ spring:
   mongodb:
     embedded:
       version: 4.0.21
+  redis:
+    host: localhost
+    port: 6379
 
 test:
   topic: color-messages-test-topic
